Fixed: Extra Padding issues on navabr items

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,6 @@
   --color-dark-slate: var(--dark-slate);
   --color-navy: var(--navy);
   --color-dark-navy: var(--dark-navy);
-  --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
